@@ -44,7 +44,7 @@
 
       \item New function \code{.S3method()} to register S3 methods in R
       scripts.
-      
+
       \item \code{file.path()} has some support for file paths not in
       the session encoding, e.g.\sspace{}with UTF-8 inputs in a
       non-UTF-8 locale the output is marked as UTF-8.
@@ -113,7 +113,7 @@
       \item There is a new variant option \option{--enable-lto=check}
       for checking consistency of BLAS/LAPACK/LINPACK calls --- see
       \sQuote{Writing R Extensions}.
-      
+
       \item A C++ compiler default is set only if the C++11 standard is
       supported: it no longer falls back to C++98.
     }
@@ -147,6 +147,9 @@
       than arbitrary \code{n = 100}.
 
       \item \code{format(as.symbol("foo"))} now works (returning \code{"foo"}).
+
+      \item allow \code{add_datalist(*, small.size=0)} to create a
+      \file{data/datalist} file also in case the data sets are small.
     }
   }
 }
